# ethereum-research-data

./: .gitignore  =  ARCHITECTURE.md  README.md  REVIEW.md  SEARCH-ARCHITECTURE.md  docker-compose.yml  pyproject.toml  sources.json
.claude/: ralph-loop.local.md
config/: com.erd.embed-proxy.plist  com.meilisearch.plist  indexer.toml  meilisearch.service
converter/: __init__.py  __main__.py  cli.py  discourse_to_md.py
erd_index/: __init__.py  __main__.py  cli.py  embed_proxy.py  models.py  pipeline.py  search_cli.py  settings.py
scraper/: __init__.py  __main__.py  cli.py  discourse.py
scripts/: backfill_text_length.py  batch_embed.py  benchmark_baseline.json  benchmark_embeddings.py  benchmark_post_dedupe.json  benchmark_queries.py  benchmark_search.py  curate_eips.py  index_meili.sh  install_skill.sh  refresh.sh  setup_hybrid.sh  setup_qmd.sh
snapshots/: benchmark_embeddinggemma.json  benchmark_full_prefix.json  benchmark_pre_prefix.json  benchmark_query_prefix_only.json
tests/: conftest.py  test_batch_embed.py  test_benchmark.py  test_cli.py  test_code_chunker.py  test_converter.py  test_crash_safety.py  test_document_builder.py  test_edge_builder.py  test_eip_refs.py  test_embed_proxy.py  test_enrichment.py  test_file_walker.py  test_frontmatter.py  test_graph_store.py  test_incremental.py  test_language_detector.py  test_markdown_chunker.py  test_meili_client.py  test_meili_schema.py  test_models.py  test_node_builder.py  test_pdf_parser.py  test_pdf_pipeline.py  test_pipeline_helpers.py  test_run_log.py  test_scraper.py  test_scraper_converter.py  (+7 more)
(+6514 files in other folders)
